front-end/css/mjhw4n.css
body {
    background-image: url("../resource/background.jpg");
    background-size: cover;
    background-repeat: no-repeat;
}
.main-nav {
    background-color: #232f3e;
    display: flex;
    height: 70px;

    padding-left: 70px;
    padding-right: 70px;
}
.nnav {
    display: flex;
    list-style: none;
    align-items: center;
}
#logo {
    width: 110px;
    height: 60px;
    padding-left: 20px;
    padding-right: 20px;
}
.font-white {
    color: #f2e8dc;
}
.info {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   padding: 15px;
}
.achie-title {
    color: black;
    display: flex;
    width: 100%;
    overflow: auto;
    justify-content: center;
    align-items: center;
    margin: 15px;
    font-weight: bold;
}
.achie-table {
    background-color: rgba(35, 47, 62, 0.8);
    border-radius: 12px;
    padding: 10px;
    text-align: center;
}
tr {
    color: #f2e8dc;
}
.news-out {
    background-color: #232f3e;
    color: white;
    border-radius: 4vh;
    position: absolute;
}
.news-in {
    background-color: #31485A;
    color: white;
    height: calc(100% - 71px);
    margin: 0px;
    border-radius: 3vh;
    position: absolute;
    list-style-type: none;
}
.news-title {
    text-align: center;
    font-size: 32px;
    margin: 0px;
}
.news-in li {
    margin: 20px;
    word-wrap: break-word;
}
.news-line {
    font-size: 16px;
    color: white;
}
.homepage-box {
    margin-top: 50px;
    margin-bottom: 50px;
}

